<resources>
    <string name="str_app_name">Money Manager</string>
    <string name="app_icon">App icon</string>
    <string name="softc_apps">SoftC Apps</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="you_received_message_from_developer">You have received a new message from developer.</string>
    <string name="okay">Okay</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="purchase_failed_error_msg">Oops! The purchase has failed.</string>
    <string name="purchase_has_not_completed_msg">Oops! The purchase has not completed successfully. </string>
    <string name="granting_app_permissions_msg">Hurray! Permissions have been granted successfully.</string>
    <string name="not_granting_app_permission_msg">Oops! The permissions have not been granted.
        Without granting the permissions the app is limited in functionality.</string>
    <string name="softc">SoftC</string>
    <string name="app_version">Version : 1.0 beta</string>
    <string name="version">Version</string>
    <string name="lion_and_the_mouse_sample_description">Once when a lion, the king of the jungle, was asleep, a little mouse began running up and down on him. This soon awakened the lion, who placed his huge paw on the mouse, and opened his big jaws to swallow him.</string>
    <string name="press_back_once_more_to_exit">Press back once more to exit</string>
    <string name="select_currency">Select Currency</string>
    <string name="currency">Currency</string>
    <string name="current_balance">Current balance </string>
    <string name="usd">USD</string>
    <string name="next">Next</string>
    <string name="_0_00">0.00</string>
    <string name="account_setup">Account setup : </string>
    <string name="select_ur_currency_name">Please select your currency name</string>
    <string name="account_name">Account name</string>
    <string name="bank_account">Bank account</string>
    <string name="save_account">Save account</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="give_account_name">Give the account a name</string>
    <string name="inr">INR</string>
    <string name="credit_card">Credit card</string>
    <string name="new_account">New Account</string>
    <string name="note">Note</string>
    <string
        name="app_require_write_permissions"><![CDATA[The app requires some permissions to work properly.]]></string>
    <string name="grant_permission">Grant permissions</string>
    <string name="restart_app_for_effect">Please restart the app.</string>
    <string name="add_expenses">Add expenses</string>
    <string name="add_money">Add money</string>
    <string name="navigation_drawer">Navigation drawer</string>
    <string name="overview">Overview</string>
    <string name="select_ur_prefer_language">Please select your prefer language.</string>
    <string name="choose_default_language">Choose defualt language</string>
    <string name="total_balance">Total Balance</string>
    <string name="_60000">₹ 60000.00</string>
    <string name="september">September</string>
    <string name="_2016">4/9/2016</string>
    <string name="budget">Budget</string>
    <string name="no_budget">No Budget</string>
    <string name="_4500">₹ 4500</string>
    <string name="total_expense">Total Expense</string>
    <string name="over_budget_warning">Over Budget</string>
    <string name="date_example">04 Sep</string>
    <string name="_600">₹ 600</string>
    <string name="__600">₹ 600</string>
    <string name="dinner_with_dip">Dinner with amiyo.</string>
    <string name="_4300">₹ 4300</string>
    <string name="total_income">Total Income</string>
    <string name="savings">Savings</string>
    <string name="_700">₹ 700</string>
    <string name="_5000">₹ 5000</string>
    <string name="via_bank_account">Bank Account</string>
    <string name="category_example">Category : Income, Salary</string>
    <string name="category_color">Category Color</string>
    <string name="september_2016">September 2016</string>
    <string name="month">Month</string>
    <string name="all_accounts">All accounts</string>
    <string name="new_transaction">New Transaction</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="additional_info">Additional Information</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="date">Date</string>
    <string name="give_transaction_amount">Give the transaction amount.</string>
    <string name="select_category">Select a category</string>
    <string name="select_account">Select account</string>
    <string name="select">Select</string>
    <string name="total_amount">Total amount</string>
    <string name="_0">₹ 0</string>
    <string name="transaction_note">Transaction Note</string>
    <string name="food_amp_drink"><![CDATA[Food & Drink]]></string>
    <string name="income">Income</string>
    <string name="total_available_balance">Total Available Balance</string>
    <string name="savings_of_the_moth">Savings Of The Month</string>
    <string name="budget_of_the_month">Budget Of The  Month</string>
    <string name="_4_sep">4 Sep</string>
    <string name="done">Done</string>
    <string name="camera">Camera</string>
    <string name="memo_picture">Memo Picture</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="gallery">Gallery</string>
    <string name="select_file">Select File</string>
    <string name="choose">Choose</string>
    <string name="delete_img">Delete Image</string>
    <string name="memo_image">Memo Image</string>
    <string name="none">None</string>
    <string name="cant_show">Can\'t show</string>
    <string name="transaction">Transaction</string>
    <string name="example_note">Example note</string>
    <string name="account">Account</string>
    <string name="are_you_sure_want_to_delete">Are you sure want to delete ?</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="atm_card">ATM Card</string>
    <string name="initial_balance">Initial balance.</string>
    <string name="starting_balance">Starting Balance</string>
    <string name="choose_option">Choose option</string>
    <string name="other">Other</string>
    <string name="pic_a_choice">Pic a choice</string>
    <string name="select_file_to_upload">Select a File to Upload</string>
    <string name="restore_data_from_sdcard">Restore data from sdcard</string>
    <string name="i_am_new_user">I am a new user</string>
    <string name="please_install_a_file_mager">Please install a File Manager.</string>
    <string name="item_is_not_valid_database_file">The selected item is not a valid database file.</string>
    <string name="select_your_choice">Select your choice</string>
    <string name="transaction_account">Transaction Account</string>
    <string name="choose_expense_account">Choose Expense Account</string>
    <string name="choose_income_account">Choose Income Account</string>
    <string name="currency_symbol">Currency Symbol</string>
    <string name="_usd_symbol">$</string>
    <string name="_0_usd">$ 0</string>
</resources>
