<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/activity_new_account_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_layout"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textBodyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/dp_16"
                android:text="@string/account_name"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/edit_account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="start"
                android:hint="@string/credit_card"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:orientation="horizontal">

            <TextView
                style="@style/textBodyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/dp_16"
                android:text="@string/currency"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/currency_selector_spinner"
                style="@style/textBodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_16"
                android:background="@drawable/ic_edit_text_border"
                android:clickable="true"
                android:padding="@dimen/dp_8"
                android:text="@string/inr"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:orientation="horizontal">

            <TextView
                style="@style/textBodyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/dp_16"
                android:text="@string/initial_balance"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/edit_starting_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="start"
                android:hint="@string/_0_00"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <EditText
            android:id="@+id/edit_account_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="start"
            android:hint="@string/note"
            android:inputType="textLongMessage"
            android:maxLines="5"
            android:minLines="2"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_3"
        android:layout_below="@+id/toolbar_layout"
        android:background="@drawable/tool_bar_drop_down"/>

</RelativeLayout>
