<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/transaction_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/bnt_category_color"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/dp_4"
            android:background="@color/red_300"
            android:contentDescription="@string/category_color"/>

        <TextView
            android:id="@+id/txt_transaction_note"
            style="@style/textBodyStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_toEndOf="@+id/bnt_category_color"
            android:layout_toStartOf="@+id/txt_transaction_amount"
            android:maxLines="3"
            android:text="@string/dinner_with_dip"
            android:textSize="@dimen/sp_15"
            />

        <TextView
            android:id="@+id/txt_transaction_amount"
            style="@style/textBodyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/dp_4"
            android:gravity="end"
            android:text="@string/__600"
            android:textColor="@color/red_300"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_transactional_account"
            style="@style/textBodyStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_2"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_acc"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/via_bank_account"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txt_transaction_category"
            style="@style/textBodyStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dp_8"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/income"
            android:textStyle="bold"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@drawable/ic_border_line" />

</LinearLayout>
