<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/bnt_date_selector"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dp_8"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_month"
            style="@style/textBodyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="start"
            android:text="@string/month"/>

        <TextView
            android:id="@+id/txt_overview_month"
            style="@style/SubHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:gravity="start"
            android:text="@string/september_2016"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"
            android:layout_marginEnd="@dimen/dp_4"
            android:layout_marginStart="@dimen/dp_4"
            android:background="?android:attr/textColorSecondary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/dp_8"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_total_available_balance"
            style="@style/textBodyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="end"
            android:text="@string/total_available_balance"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/txt_total_balance"
            style="@style/textBodyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_0"
            android:gravity="end"
            android:textColor="@color/indigo_500"
            android:singleLine="true"
            android:text="@string/_60000"
            android:textSize="@dimen/sp_24"
            />

    </LinearLayout>

</LinearLayout>
