<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/bnt_budget_selector"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dp_8"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_budget"
            style="@style/textBodyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="start"
            android:text="@string/budget"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txt_overview_budget"
            style="@style/textBodyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:gravity="start"
            android:text="@string/_4500"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"
            android:layout_marginEnd="@dimen/dp_4"
            android:layout_marginStart="@dimen/dp_4"
            android:background="?android:attr/textColorSecondary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/dp_8"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_total_expenses_preview"
            style="@style/textBodyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="end"
            android:text="@string/total_expense"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_total_expenses"
            style="@style/textBodyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_0"
            android:gravity="end"
            android:singleLine="true"
            android:text="@string/_4300"
            android:textColor="@color/red_900"
            android:textSize="@dimen/sp_24"
            />

    </LinearLayout>

</LinearLayout>
